# YTRAG

./: pyproject.toml  requirements.txt
.github/: copilot-instructions.md
notebook/: Expenses.ipynb
